# data_formatter

./: CONTRIBUTING.rst  HISTORY.rst  Makefile  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: conf.py  data_formatter.rst  index.rst  modules.rst
src/data_formatter/: __init__.py  calculations.py  constants.py  dataframe_add_calculation.py  dataframe_find.py  excel_attributes.py  excel_chart_styles.py  excel_dataframe_styles.py  excel_output.py  pivot_tables.py  util.py  validate.py
tests/: __init__.py  other.py  test_calculations.py  test_data_formatter.py  test_dataframe_add_calculation.py  test_dataframe_find.py  test_pivot_tables.py  test_util.py
