[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "data_formatter"
version = "0.1.0"
description = "The package helps format data for reporting and analysis."
readme = "README.rst"
authors = [
  {name = "Jared Felice", email = "jared.felice@fisherautoparts.com"}
]
maintainers = [
  {name = "Jared Felice", email = "jared.felice@fisherautoparts.com"}
]
classifiers = [

]
license = {text = "Not open source"}
dependencies = [
    "setuptools>=65.5.1",
    "wheel==0.43.0",
    "pandas>=2.2.2",
    "openpyxl>=3.1.3",
    "xlsxwriter>=3.2.0",
    "numpy>=1.26.4",
    "casefy>=0.1.7"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

